<resources>
    <string name="app_name">Training Schedule</string>
    <string name="nfc_not_available">NFC NOT AVAILABLE</string>
    <string name="login_failed">LOGIN FAILED</string>
    <string name="no_internet">NO INTERNET</string>
    <string name="cant_write_off">Can not write off training</string>
    <string name="cant_cancel">Can not cancel training</string>
    <string name="login">LOGIN</string>
    <string name="training">training</string>
    <string name="schedule">schedule</string>
    <string name="clients">clients</string>
    <string name="attach_card">attach card</string>
    <string name="one_day">1 day</string>
    <string name="three_day">3 days</string>
    <string name="week">week</string>
    <string name="cant_edit">can not edit training</string>
    <string name="writtenoff_cantedit">is written off, can not edit it</string>
    <string name="dropincorrect">drop to correct place</string>
    <string name="nfc_canceled">NFC scan canceled</string>
    <string name="training_canceled">training canceled</string>
    <string name="training_writtenoff">training was written off</string>
    <string name="training_moved">training moved</string>
    <string name="new_training_added">New scheduleEvent added</string>
    <string name="training_not_added">Event not added</string>

    <string name="settings">Settings</string>
    <string name="add_new_training">Add training?</string>
    <string name="cant_load_events">Can not load calendarEvents</string>
    <string name="error_load_card_info">Can\'t read card info from server</string>
    <string name="toast_msg_edit_pref_schedule_time_step">must be a divider of 60</string>
    <string name="settings_pwd_dialog_message">Enter admin password</string>
    <string name="wrong_admin_pwd">WRONG ADMIN PWD!</string>
    <string name="cant_connect_to_server">Can\'t connect to server!</string>
    <string name="connection_timeout_exceeded">Connection timeout exceeded!</string>
    <string name="search">Search</string>
    <string name="new_version_available">New version available</string>
    <string name="admin_pwd" translatable="false">11235813</string>
    <string name="update_app">Update app?</string>

    <string name="pref_version_key" translatable="false">pref_version</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_service_address_key" translatable="false">pref_service_address</string>
    <string name="pref_service_address_title">Service address</string>
    <string name="pref_service_address_hint">http://HOST_ADDRESS/INFOBASE_NAME/</string>
    <string name="pref_service_login_key" translatable="false">pref_service_login</string>
    <string name="pref_service_pwd_key" translatable="false">pref_service_pwd</string>
    <string name="pref_auth_timeout_key" translatable="false">pref_auth_timeout</string>
    <string name="pref_auth_timeout_title">Authorization end timeout</string>
    <string name="pref_auth_timeout_hint">idle time after which the authorization will be reset (sec.)</string>
    <string name="pref_schedule_time_step_hint">minutes</string>
    <string name="pref_schedule_time_step_key" translatable="false">pref_schedule_time_step</string>
    <string name="pref_schedule_time_step_title">Schedule time step</string>
    <string name="pref_club_api_url_key" translatable="false">pref_club_api_url_key</string>
    <string name="pref_service_login_title">Service login</string>
    <string name="pref_service_pwd_title">Service password</string>
    <string name="auth_service_failed_msg">Authentication to service failed. Check login and pwd is settings</string>

</resources>
